[package]
name = "midata"
version = "0.1.0"
authors = ["Jan Müller <jan.m.muller@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0", features = ["json"] }
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
cached = "0.22.0"
